--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ margin: 10px; float: right; vertical-align: middle;
      <img id="wip" src="test/workinprogress.png" alt="WorkInProgressImage">
      <p>This Site is</p>
      <h2 id="cs">Coming Soon</h2>
+     In the meanwhile try here:<br>
+     <a href="https://github.com/wilfm">https://github.com/wilfm</a>
     </div>
 
     <div id="cc">
